# coiote_optimization

./: .gitignore  CMakeLists.txt  CostMatrix.cpp  CostMatrix.hpp  Dummy.cpp  Dummy.hpp  ExceptionManager.cpp  ExceptionManager.h  Loader.cpp  Loader.hpp  PeopleMatrix.cpp  PeopleMatrix.hpp  Problem.cpp  Problem.hpp  README.md  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  Solution.cpp  Solution.hpp  SolutionCell.cpp  SolutionCell.hpp  config.h  main.cpp  util.cpp  util.hpp
Exceptions/Headers/: CoioteBaseException.hpp  CoioteException.hpp  IOException.hpp
Exceptions/Implementations/: CoioteBaseException.cpp  CoioteException.cpp  IOException.cpp
Resources/Input/: Co_100_1_NT_0.txt  Co_100_1_NT_1.txt  Co_100_1_NT_2.txt  Co_100_1_NT_3.txt  Co_100_1_NT_4.txt  Co_100_1_NT_5.txt  Co_100_1_NT_6.txt  Co_100_1_NT_7.txt  Co_100_1_NT_8.txt  Co_100_1_NT_9.txt  Co_100_1_T_0.txt  Co_100_1_T_1.txt  Co_100_1_T_2.txt  Co_100_1_T_3.txt  Co_100_1_T_4.txt  Co_100_1_T_5.txt  Co_100_1_T_6.txt  Co_100_1_T_7.txt  Co_100_1_T_8.txt  Co_100_1_T_9.txt  Co_100_20_NT_0.txt  Co_100_20_NT_1.txt  Co_100_20_NT_2.txt  Co_100_20_NT_3.txt  Co_100_20_NT_4.txt  Co_100_20_NT_5.txt  Co_100_20_NT_6.txt  Co_100_20_NT_7.txt  Co_100_20_NT_8.txt  Co_100_20_NT_9.txt  Co_100_20_T_0.txt  Co_100_20_T_1.txt  Co_100_20_T_2.txt  Co_100_20_T_3.txt  Co_100_20_T_4.txt  Co_100_20_T_5.txt  Co_100_20_T_6.txt  Co_100_20_T_7.txt  Co_100_20_T_8.txt  Co_100_20_T_9.txt  (+41 more)
